--- a/app/src/main/res/layout/activity_main_i2c.xml
+++ b/app/src/main/res/layout/activity_main_i2c.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityI2C">
+    tools:context="ch.bfh.ti.main.MainActivity">
 
     <TextView
         android:id="@+id/textViewAmbientLight"
@@ -18,5 +18,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.502" />
+
+    <TextView
+        android:id="@+id/dataReceived"
+        android:layout_width="423dp"
+        android:layout_height="54dp"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.278" />
 
 </android.support.constraint.ConstraintLayout>
